Terraform Project/Terraform NGINX on EC2/security-group.tf
resource "aws_security_group" "nginx-sg" {
    vpc_id = aws_vpc.tera-vpc.id
    
    #Inbound rule for http
    ingress{
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]   
    }

    #Outbound rule for http
    egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name="nginx-sg"
    }

    ingress {
  from_port   = 22
  to_port     = 22
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

}
